# pytest-markdown

./: .gitignore  .travis.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
pytest_markdown/: __init__.py  plugin.py
scripts/: test.sh
tests/integration/: example.md
