[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pytest_markdown"
author = "John Carr"
author-email = "john.carr@unrouted.co.uk"
home-page = "https://github.com/Jc2k/pytest-markdown"

requires=['pytest>=3.6.0', 'CommonMark>=0.7.5']
requires-python='>=3.6'

description-file='README.md'
classifiers=[
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Framework :: Pytest',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Software Development :: Testing',
]

[tool.flit.entrypoints."pytest11"]
markdown = "pytest_markdown.plugin"

#[tool.flit.metadata.requires-extra]
#test = [
#    'pytest',
#    'flake8',
#    'flake8-isort',
#]
